# goattracker2

./: .gitignore  CMakeLists.txt  readme.txt
.github/: README.md
linux/: CMakeLists.txt
src/: CMakeLists.txt  config.h.in  gconsole.c  gdisplay.c  gdisplay.h  ghelp.c  goattrk2.c  gpattern.c  greloc.c  gsid.cpp  gsid.h  makefile  makefile.common
src/asm/: lexyy.c  parse.c
src/bme/: datafile.c  makefile
src/resid/: filter8580new.cc
